rearranged all files

--- a/HTML/Html Tags/BodyTags/Marquee/image_marquee.html
+++ b/HTML/Html Tags/BodyTags/Marquee/image_marquee.html
@@ -6,8 +6,8 @@
     <title>Images in Marquee</title>
 </head>
 <body>
-    <div>
-        <marquee direction="down">
+    <div style="height: 600px; width: 30%; margin: auto; padding: auto;">
+        <marquee direction="down" style="margin-left: 100px;">
             <img src="images/img1.jpg" alt="" height="250px" width="250px">
             <br>
             <img src="images/img2.jpg" alt="" height="250px" width="250px">
