--- a/HTML/Html Tags/BodyTags/Paragraph/Paragraph.html
+++ b/HTML/Html Tags/BodyTags/Paragraph/Paragraph.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paragraph</title>
 </head>
+
 <body>
 
     <!-- Using character set for show space -->
     <p align="justify" style="width: 80%; margin: auto;">
-        &nbsp; &nbsp;  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod?
+        &nbsp; &nbsp; Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum
+        numquam atque nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque
+        nam, autem repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod? Lorem ipsum
+        dolor sit, amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem
+        repellat nihil tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod? Lorem ipsum dolor sit,
+        amet consectetur adipisicing elit. Aut maiores eum doloribus enim earum numquam atque nam, autem repellat nihil
+        tempora cumque suscipit aspernatur ratione id ab nostrum dolore. Quod?
     </p>
 
     <br><br>
@@ -20,11 +29,20 @@
         <strong>Arthur Oswin Austin</strong>
     </p>
     <p align="justify" style="text-indent: 80px; width: 80%; margin: auto;">
-        Arthur Oswin Austin (1879–1964) was an American electrical engineer and inventor. He is best known as the inventor of the Austin transformer, used to supply power for lighting circuits on radio towers. Austin's work included improvements to radio transmission equipment and the effects of lightning on high-voltage transmission lines and aircraft. He was a fellow of the American Institute of Electrical Engineers and of the Institute of Radio Engineers, and was known as an expert in high-voltage insulators and fittings. His work on transmitting antennas included both military and civilian projects. Born in California, Austin graduated from Stanford University with a degree in electrical engineering. He spent most of his adult life in Ohio where he worked for the Ohio Brass Company and founded the Austin Insulator Company. He bought a large estate in Barberton, Ohio, lived in the mansion, and built an extensive outdoor electrical laboratory on the grounds.
+        Arthur Oswin Austin (1879–1964) was an American electrical engineer and inventor. He is best known as the
+        inventor of the Austin transformer, used to supply power for lighting circuits on radio towers. Austin's work
+        included improvements to radio transmission equipment and the effects of lightning on high-voltage transmission
+        lines and aircraft. He was a fellow of the American Institute of Electrical Engineers and of the Institute of
+        Radio Engineers, and was known as an expert in high-voltage insulators and fittings. His work on transmitting
+        antennas included both military and civilian projects. Born in California, Austin graduated from Stanford
+        University with a degree in electrical engineering. He spent most of his adult life in Ohio where he worked for
+        the Ohio Brass Company and founded the Austin Insulator Company. He bought a large estate in Barberton, Ohio,
+        lived in the mansion, and built an extensive outdoor electrical laboratory on the grounds.
     </p>
 
     <br><br>
 
     <!--  -->
 </body>
+
 </html>
