--- a/HTML/test/DEMO.HTM
+++ b/HTML/test/DEMO.HTM
@@ -13,11 +13,14 @@
             background-color: #e6f7e6;
         }
 
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid black;
         }
 
-        th, td {
+        th,
+        td {
             padding: 10px;
             text-align: left;
         }
