--- a/HTML/Html Tags/BodyTags/Heading/Heading.html
+++ b/HTML/Html Tags/BodyTags/Heading/Heading.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Heading tags is use for give html content heading -->
     <h1>This is heading 1</h1>
     <h2>This is heading 2</h2>
     <h3>This is heading 3</h3>
