--- a/assignment/Table.html
+++ b/assignment/Table.html
@@ -6,40 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invoice</title>
     <style>
-        table {
-            width: 70%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-            background-color: #e6f7e6;
-        }
-
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
-
-        th,
-        td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        .no-border {
-            border: none;
-        }
-
-        .right-align {
-            text-align: right;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        .total-row {
-            text-align: left;
-        }
+        @import url(css/Table.css);
     </style>
 </head>
 
@@ -67,30 +34,39 @@
         </tr>
 
         <tr>
-            <th>Name / Description</th>
-            <th>Qty.</th>
-            <th>@</th>
-            <th>Cost</th>
+            <td>Name / Description <br><br>
+                Paperclips <br><br>
+                Staples (box)
+            </td>
+            <td>Qty. <br><br>
+                2000 <br><br>
+                200
+            </td>
+            <td>@ <br><br>
+                0.02 <br><br>
+                2.00</td>
+            <td>Cost <br><br>
+                20.00 <br><br>
+                200.00</td>
         </tr>
-        <tr>
-            <td>Paperclips</td>
-            <td>2000</td>
+        <!-- <tr>
+            <td></td>
             <td>0.02</td>
             <td>20.00</td>
         </tr>
         <tr>
-            <td>Staples (box)</td>
+            
             <td>200</td>
             <td>2.00</td>
             <td>200.00</td>
-        </tr>
+        </tr> -->
         <tr>
             <td colspan="3" class="bold">Subtotal</td>
             <td class="total-row bold">220.00</td>
         </tr>
         <tr>
-            <td colspan="2" class="no-border"></td>
-            <td class="bold">Tax (9%)</td>
+            <td colspan="2" class="bold">Tax</td>
+            <td class="bold">(9%)</td>
             <td class="total-row bold">19.80</td>
         </tr>
         <tr>
